# faust-avro-serializer

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  README.md  azure-pipelines.yml  pyproject.toml
faust_avro_serializer/: __init__.py  avro_serializer.py
tests/: clean_payload_test.py
tests/unit/: avro_serializer_test.py
