[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"


[tool.flit.metadata]
module = "faust_avro_serializer"
dist-name = "faust-avro-serializer"
author = "bakdata"
author-email = "info@bakdata.com"
home-page = "https://github.com/bakdata/faust-avro-serializer"
description-file="README.md"
requires-python = ">=3.6"
requires = [
    "python-schema-registry-client==1.8.2",
    "faust-streaming",
    "bump2version"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
]
